--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </span>
                     <div class="desc" style="color: black;">
                       <h2 class="mb-4" style="color: black;">Services</h2>
-					  <h6 class="mb-4" style="color: gray;">Services I provide as a freelencer.</h6>
+					  <h6 class="mb-4" style="color: black;">Services I provide as a freelencer.</h6>
                     </div>
                   </a>
                 </div>
