--- a/index.html
+++ b/index.html
@@ -69,16 +69,17 @@
     </div>
 
     <div class="content">
-        <div class="container">
-          <div class="row justify-content-center py-5 mt-5">
-            <div class="col-md-12 heading-section text-center ftco-animate">
-              <h1 class="mb-4">Websites</h1>
-              <p>All the important links are provided here.</p>
-            </div>
+      <div class="container">
+        <div class="row justify-content-center py-5 mt-5">
+          <div class="col-md-12 heading-section text-center ftco-animate">
+            <h1 class="mb-4">Websites</h1>
+            <p style="color: white;">All the important links are provided here.</p>
           </div>
+        </div>
+    
          
                 <div class="col-md-20 text-center d-flex align-items-stretch">
-                  <a class="services-1 w-100" href="https://collegers.in/" target="_blank" style="background-color: #fd8f00; color: black; transition: background-color 0.3s, color 0.3s;">
+                  <a class="services-1 w-100" href="https://collegers.in/" target="_blank" style="background-color: #fd8f52; color: fd8f52; transition: background-color 0.3s, color 0.3s;">
                     <span class="icon">
                       <i class="fas fa-graduation-cap" style="color: black;"></i>
                     </span class="text-left;">
@@ -89,7 +90,7 @@
                   </a> 
                 </div>
                 <div class="col-md-20 text-center d-flex align-items-stretch">
-                  <a class="services-1 w-100" href="https://rb.gy/ylayo3" target="_blank" style="background-color: #ffffff; color: black; transition: background-color 0.3s, color 0.3s;">
+                  <a class="services-1 w-100" href="https://rb.gy/ylayo3" target="_blank" style="background-color: #fd8f52; color: fd8f52; transition: background-color 0.3s, color 0.3s;">
                     <span class="icon">
                       <i class="fas fa-briefcase" style="color: black;"></i>
                     </span>
@@ -100,7 +101,7 @@
                   </a>
                 </div>
                 <div class="col-md-20 text-center d-flex align-items-stretch">
-                  <a class="services-1 w-100" href="https://rb.gy/ksktca" target="_blank" style="background-color: #00ff2a; color: black; transition: background-color 0.3s, color 0.3s;">
+                  <a class="services-1 w-100" href="https://rb.gy/ksktca" target="_blank" style="background-color: #fd8f52; color: fd8f52; transition: background-color 0.3s, color 0.3s;">
                     <span class="icon">
                       <i class="fas fa-concierge-bell" style="color: black;"></i>
                     </span>
@@ -118,9 +119,9 @@
       <script>
         document.querySelectorAll('.services-1').forEach(function(element) {
           element.addEventListener('mouseover', function() {
-            this.style.backgroundColor = 'yellow'; // Change to blue on hover
+            this.style.backgroundColor = '#c2571e'; // Change to blue on hover
             this.querySelectorAll('*').forEach(function(child) {
-              child.style.color = 'black'; // Ensure all text changes to black on hover
+              child.style.color = 'white'; // Ensure all text changes to black on hover
             });
           });
           element.addEventListener('mouseout', function() {
